--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,6 @@
     Last Name:  <input type="text" name="lname" size=30><p>
     <input type="submit">
     <form/>
-
+    <img src="test.png" alt="teeeest">
   </body>
 </html>
