--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
     </footer>
     <form action="/System/Volumes/Data/Users/megrisse/Desktop/webserv/UTILS/fileCGI.php" method="GET">  
     First Name: <input type="text" name="fname" size=30><p>
-    Last Name:  <input type="text" name="lname" size=30><p>
+    Your Age  :  <input type="text" name="age" size=30><p>
     <input type="submit">
     <form/>
   </body>
