re Build Response ..

--- a/www/index.html
+++ b/www/index.html
@@ -41,6 +41,6 @@
     First Name: <input type="text" name="fname" size=30><p>
     Your Age  :  <input type="text" name="age" size=30><p>
     <input type="submit">
-    <form/>
+    </form>
   </body>
 </html>
