--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
       <p>&copy; 2023 My Blog</p>
       <img src="test.png" alt="teeeest">
     </footer>
-    <form action="/System/Volumes/Data/Users/megrisse/Desktop/webserv/UTILS/fileCGI.php" method="GET">  
+    <form action="../UTILs/fileCGI.php" method="GET">  
     First Name: <input type="text" name="fname" size=30><p>
     Your Age  :  <input type="text" name="age" size=30><p>
     <input type="submit">
