--- a/www/indes.html
+++ b/www/indes.html
@@ -13,8 +13,7 @@
 </head>
 <body>
   <div class="image-container">
-    <img src="warning.png" alt="Image" />
-    
+    <img src="test.png" alt="Image" />
   </div>
 </body>
 </html>
