--- a/www:root/index.html
+++ b/www:root/index.html
@@ -39,7 +39,7 @@
     <footer>
       <p>&copy; 2023 My Blog</p>
     </footer>
-    <form action="fileCGI.php" method="PUT">  
+    <form action="../UTILS/fileCGI.php" method="GET">  
     First Name: <input type="text" name="fname" size=30><p>
     Last Name:  <input type="text" name="lname" size=30><p>
     <input type="submit">
