--- a/www/www:root/index.html
+++ b/www/www:root/index.html
@@ -1,11 +1,76 @@
-
-
-
 <!DOCTYPE html>
 <html>
   <head>
     <title>My Blog</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+      }
+  
+      header {
+        background-color: #434343;
+        color: #fff;
+        text-align: center;
+        padding: 20px;
+      }
+
+      nav ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-around;
+        background-color: #f2f2f2;
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+      }
+
+      nav li {
+        margin: 0;
+      }
+
+      nav a {
+        display: block;
+        padding: 10px;
+        color: #333;
+        text-decoration: none;
+      }
+
+      nav a:hover {
+        background-color: #ccc;
+      }
+
+      main {
+        width: 80%;
+        margin: 0 auto;
+      }
+
+      article {
+        margin-bottom: 30px;
+      }
+
+      article header {
+        background-color: #921a1a;
+        padding: 10px;
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+        border-radius: 15 15;
+      }
+
+      article h2 {
+        margin: 0;
+      }
+
+      article p {
+        line-height: 1.5;
+      }
+
+      aside {
+        width: 20%;
+        float: right;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -39,11 +104,10 @@
     <footer>
       <p>&copy; 2023 My Blog</p>
     </footer>
-    <form action="../UTILS/fileCGI.php" method="GET">  
+    <form action="../PHP/fileCGI.php" method="GET">  
     First Name: <input type="text" name="fname" size=30><p>
     Last Name:  <input type="text" name="lname" size=30><p>
     <input type="submit">
     <form/>
-
   </body>
 </html>
