Lah idir Lkhir ..

--- a/www/start/index.html
+++ b/www/start/index.html
@@ -45,7 +45,7 @@
     <h1>Welcome to our HUMBLE WEBSERVER!</h1>
     <p>This is the index page of our web server.</p>
     <p class="message">This is the default page for my website.</p>
-    <a class="cta-button" href="../indes.html">Get Started</a>
+    <a class="cta-button" href="begin.html">Get Started</a>
   </div>
 
 </body>
