--- a/www/begin.html
+++ b/www/begin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Your Website Title</title>
+  <title>Our Website</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -51,9 +51,11 @@
     <p>This is the main page of your web server.</p>
     <p class="message">This is the default page for my website. Feel free to explore the options below.</p>
     <div>
-      <a class="cta-button" href="/PHP/">Execute CGI Scripts</a>
-      <a class="cta-button" href="/RED/">Redirect to Another Page</a>
-      <a class="cta-button" href="/upload/">Upload Files</a>
+      <a class="cta-button" href="CGI/">Execute PHP CGI Scripts</a>
+      <a class="cta-button" href="CGI/filecgi.pl">Execute PERL CGI Scripts</a>
+      <a class="cta-button" href="RED/">Redirect to Another Page</a>
+      <a class="cta-button" href="upload/">Upload Files</a>
+      <a class="cta-button" href="PHP/loginx.php">Test Session</a>
     </div>
   </div>
 </body>
