--- a/www/index.html
+++ b/www/index.html
@@ -1,114 +1,52 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-  }
-  
-  header {
-    background-color: #434343;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-  }
-  
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-around;
-    background-color: #f2f2f2;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-  }
-  
-  nav li {
-    margin: 0;
-  }
-  
-  nav a {
-    display: block;
-    padding: 10px;
-    color: #333;
-    text-decoration: none;
-  }
-  
-  nav a:hover {
-    background-color: #ccc;
-  }
-  
-  main {
-    width: 80%;
-    margin: 0 auto;
-  }
-  
-  article {
-    margin-bottom: 30px;
-  }
-  
-  article header {
-    background-color: #921a1a;
-    padding: 10px;
-    border-top: 1px solid #ccc;
-    border-bottom: 1px solid #ccc;
-    border-radius: 15 15;
-  }
-  
-  article h2 {
-    margin: 0;
-  }
-  
-  article p {
-    line-height: 1.5;
-  }
-  
-  aside {
-    width: 20%;
-    float: right;
-  }
-    </style>
-    <title>My Blog</title>
-    <!-- <link rel="stylesheet" href="style.css"> -->
-  </head>
-  <body>
-    <header>
-      <h1>My Blog</h1>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-    <main>
-      <article>
-        <header>
-          <h2>My First Blog Post</h2>
-          <p>Posted on May 1, 2023</p>
-        </header>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel felis nec turpis commodo hendrerit. Integer sed enim non mauris tincidunt sagittis. Vestibulum hendrerit scelerisque ipsum vel aliquam. Sed a odio vel quam facilisis sodales. Etiam at lacus vel enim feugiat fringilla. Sed feugiat erat ac urna pharetra interdum.</p>
-        <p>Etiam sit amet leo ac massa commodo bibendum. Aliquam erat volutpat. Duis posuere urna sit amet nunc bibendum lobortis. Nulla fermentum nulla vel purus ullamcorper, eget venenatis arcu tristique. Maecenas at est non urna fermentum eleifend eu eu dolor. Fusce placerat libero quis blandit iaculis. Mauris feugiat velit at consequat rhoncus.</p>
-      </article>
-    </main>
-    <aside>
-      <h3>Categories</h3>
-      <ul>
-        <li><a href="#">Category 1</a></li>
-        <li><a href="#">Category 2</a></li>
-        <li><a href="#">Category 3</a></li>
-      </ul>
-    </aside>
-    <footer>
-      <p>&copy; 2023 My Blog</p>
-      <img src="test.png" alt="teeeest">
-    </footer>
-    <form action="www/upload/" method="POST" enctype="multipart/form-data">  
-    file      : <input type="file" name="file">
-    <input type="submit">
-    </form>
-  </body>
+<head>
+  <title>Our First Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      font-style: italic;
+      margin: 0;
+      padding: 0;
+      background-color: #969696;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color:antiquewhite;
+      border-radius: 20px;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+
+        font-weight:bolder;
+        text-align: center;
+        color: #000000;
+    }
+    p {
+      color: #000000;
+      line-height: 1.0;
+    }
+    .cta-button {
+      display: inline-block;
+      padding: 12px 24px;
+      background-color: #4cf5de;
+      color: #000000;
+      font-size: 16px;
+      text-decoration: none;
+      border-radius: 10px;
+      transition: background-color 0.3s ease;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Welcome to our HUMBLE WEBSERVER!</h1>
+    <p>This is the index page of our web server.</p>
+    <p class="message">This is the default page for my website.</p>
+    <a class="cta-button" href="begin.html">Get Started</a>
+  </div>
+
+</body>
 </html>
