Fix Allowed Methods ...

--- a/www/begin.html
+++ b/www/begin.html
@@ -51,8 +51,8 @@
     <p>This is the main page of your web server.</p>
     <p class="message">This is the default page for my website. Feel free to explore the options below.</p>
     <div>
-      <a class="cta-button" href="CGI/">Execute PHP CGI Scripts</a>
-      <a class="cta-button" href="CGI/filecgi.pl">Execute PERL CGI Scripts</a>
+      <a class="cta-button" href="CGI/">Execute PHP CGI</a>
+      <a class="cta-button" href="CGI/filecgi.pl">PERL CGI</a>
       <a class="cta-button" href="RED/">Redirect to Another Page</a>
       <a class="cta-button" href="upload/">Upload Files</a>
       <a class="cta-button" href="PHP/loginx.php">Test Session</a>
