--- a/www/index.html
+++ b/www/index.html
@@ -2,43 +2,7 @@
 <html>
 <head>
   <title>Our First Website</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      font-style: italic;
-      margin: 0;
-      padding: 0;
-      background-color: #969696;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color:antiquewhite;
-      border-radius: 20px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-
-        font-weight:bolder;
-        text-align: center;
-        color: #000000;
-    }
-    p {
-      color: #000000;
-      line-height: 1.0;
-    }
-    .cta-button {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color: #4cf5de;
-      color: #000000;
-      font-size: 16px;
-      text-decoration: none;
-      border-radius: 10px;
-      transition: background-color 0.3s ease;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
