--- a/www/upload/up.html
+++ b/www/upload/up.html
@@ -6,14 +6,16 @@
         </head>
 <body>
     <hr>
+    <div class="centre">
+        
+        <form action="../UPLOADS/" method="POST" enctype="multipart/form-data">
+            <h3> Choose File With Button in the Left  </h3>
+            <label for="file">File:</label>
+            <input class="bottom" type="file" id="file" name="file">
+            <input type="submit" value="Upload">
+            <h3> Then Start the Upload With Green Button  </h3>
+        </form>
+    </div>
     <hr>
-    <hr>
-    <form action="../UPLOADS/" method="POST" enctype="multipart/form-data">
-        <h3> Choose File With Button in the Left  </h3>
-        <label for="file">File:</label>
-        <input type="file" id="file" name="file">
-        <input type="submit" value="Upload">
-        <h3> Then Start the Upload With Green Button  </h3>
-    </form>
 </body>
 </html>
