--- a/www/upload/up.html
+++ b/www/upload/up.html
@@ -13,7 +13,7 @@
             <label for="file">File:</label>
             <input class="bottom" type="file" id="file" name="file">
             <input type="submit" value="Upload">
-            <h3> Then Start the Upload With Green Button  </h3>
+            <h3> Then Start the Upload With the Green Button  </h3>
         </form>
     </div>
     <hr>
