--- a/www/begin.html
+++ b/www/begin.html
@@ -6,15 +6,16 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to Your Website!</h1>
-    <p>This is the main page of your web server.</p>
-    <p class="message">This is the default page for my website. Feel free to explore the options below.</p>
+    <h1>Welcome to Our Website!</h1>
+    <p class="message">This is the default page for Our website. Feel free to explore the options below.</p>
     <div>
       <a class="cta-button" href="CGI/">Execute PHP CGI</a>
-      <a class="cta-button" href="CGI/filecgi.pl">PERL CGI</a>
+      <a class="cta-button" href="CGI/filecgi.pl">Execute PERL CGI</a>
       <a class="cta-button" href="RED/">Redirect to Another Page</a>
       <a class="cta-button" href="upload/">Upload Files</a>
       <a class="cta-button" href="PHP/loginx.php">Test Session</a>
+      <a class="cta-button" href="PHP/cookie.php">Set Cookie</a>
+      <a class="cta-button" href="PHP/delete_cookie.php">Delete Cookie</a>
     </div>
   </div>
 </body>
