--- a/www/index.html
+++ b/www/index.html
@@ -7,8 +7,7 @@
 <body>
   <div class="container">
     <h1>Welcome to our HUMBLE WEBSERVER!</h1>
-    <p>This is the index page of our web server.</p>
-    <p class="message">This is the default page for my website.</p>
+    <p class="message">This is the default page for our web server.</p>
     <a class="cta-button" href="begin.html">Get Started</a>
   </div>
 
